# dance

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
companion-app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
companion-app/src/: App.tsx  api.ts  main.tsx  store.ts  styles.css  types.ts
companion-app/src/components/: EnergyBar.tsx  KeyBadge.tsx  LoadActions.tsx  PinButton.tsx  TopBar.tsx  TrackCard.tsx
companion-app/src/hooks/: useAbletonState.ts  useRecommend.ts  useSession.ts  useTracks.ts
companion-app/src/views/: Library.tsx  NowPlaying.tsx  SessionHistory.tsx  UpNext.tsx
companion-app/tests/: setup.ts  smoke.test.tsx
docs/: abletonosc_setup.md  als-export.md  api.md  architecture.md  cli.md  dev.md  tagging.md  troubleshooting.md
src/dance/: __init__.py  cli.py  config.py
src/dance/alembic/: env.py
src/dance/alembic/versions/: 823c72d59d8a_rename_regions_bar_count_to_length_bars.py  95ce5599f3d5_initial_schema.py
src/dance/als/: __init__.py  generator.py  markers.py  writer.py
src/dance/als/templates/: blank_live12.xml
src/dance/api/: __init__.py  app.py  deps.py  schemas.py
src/dance/api/routers/: __init__.py  ableton.py  files.py  recommend.py  sessions.py  tracks.py  ws.py
src/dance/core/: __init__.py  database.py  serialization.py
src/dance/export/: __init__.py  traktor.py
src/dance/llm/: __init__.py  brief.py  prompts.py  qwen_audio.py  tagger.py
src/dance/osc/: __init__.py  bridge.py  client.py  listener.py
src/dance/pipeline/: __init__.py  dispatcher.py  events.py  orchestrator.py  stage.py
src/dance/pipeline/stages/: __init__.py  analyze.py  analyze_stems.py  detect_cues.py  detect_regions.py  embed.py  ingest.py  llm_augment.py  separate.py
src/dance/pipeline/utils/: audio.py  beats.py  camelot.py  db.py  device.py
src/dance/recommender/: __init__.py  graph_builder.py  recommender.py
src/dance/spotify/: __init__.py  downloader.py
src/dance/watcher/: __init__.py
tests/: __init__.py  audio_fixtures.py  conftest.py  test_alembic.py  test_als_generator.py  test_analyze_stage.py  test_analyze_stems.py  test_api.py  test_audio_fixtures.py  test_detect_regions.py  test_dispatcher.py  test_embed_stage.py  test_llm.py  test_osc.py  test_pipeline_e2e.py  test_pipeline_utils.py  test_recommender.py  test_schema.py  test_tagger.py
