[project]
name = "dance"
version = "0.2.0"
description = "Stem-performance brain for Ableton Live: Spotify → analyzed tracks with stems, cues, loops, tags, and graph edges"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Arya" }]

dependencies = [
    # CLI & UX
    "click>=8.1",
    "rich>=13.0",

    # Configuration & validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",

    # Spotify download
    "spotdl>=4.2",

    # Audio I/O & analysis
    "librosa>=0.10",
    "soundfile>=0.12",
    "mutagen>=1.47",
    "essentia>=2.1b6.dev1034",

    # Stem separation. We route audio I/O through librosa/soundfile rather
    # than torchaudio (avoids torchaudio 2.9's new torchcodec + FFmpeg
    # dependency for plain WAV/MP3 loading).
    "demucs>=4.0",
    "torch>=2.0",

    # Embeddings (CLAP via transformers). Same transformers install covers
    # the Qwen2-Audio model used by the optional deep-tagger mode.
    "transformers>=4.40",

    # 4-bit quantization for Qwen2-Audio on memory-constrained Macs.
    # Optional — Qwen runs at full/half precision without it on machines
    # with enough RAM.
    "bitsandbytes>=0.42; platform_system != 'Darwin'",
    "accelerate>=0.27",

    # OSC bridge to Ableton Live (AbletonOSC plugin)
    "python-osc>=1.8",

    # Companion-app backend
    # FastAPI is pinned to match spotdl 4.4's range (<0.104, >=0.103). When spotdl
    # bumps its constraint, we can move forward.
    "fastapi>=0.103,<0.104",
    "uvicorn>=0.23,<0.24",
    "websockets>=12.0",

    # Utilities
    "tqdm>=4.65",
    "watchdog>=3.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
    # FastAPI 0.103 ships with Starlette 0.27, whose TestClient still uses the
    # legacy ``httpx.Client(app=...)`` constructor removed in httpx 0.28.
    "httpx>=0.27,<0.28",
]

[project.scripts]
dance = "dance.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dance"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
